--- a/tools/kubify/kubify/k8s/ansible/install_osx_m1.yaml
+++ b/tools/kubify/kubify/k8s/ansible/install_osx_m1.yaml
@@ -202,7 +202,7 @@
         path: "~/Library/Group Containers/group.com.docker/settings.json"
         regexp: useVirtualizationFramework
         # set to true for M1?
-        line: '  "useVirtualizationFramework" : false,'
+        line: '  "useVirtualizationFramework" : true,'
       tags: ['docker']
       when: file_docker_settings.stat.exists
       register: docker_config_changed
