--- a/backend/example-csharp-svc/kubify.yml
+++ b/backend/example-csharp-svc/kubify.yml
@@ -21,8 +21,10 @@ release:
       echo 'starting example-csharp-svc release service's pod'  
       cd /app
       dotnet watch run
+service:
+  port: "5000"
 config:
-  PORT: "8000"
+  PORT: "5000"
   APP_NAME: example-csharp-svc
   DEBUG: "example-csharp-svc:*"
   ENV: "{{ env }}"
