--- a/tools/kubify/kubify/k8s/certs/kubify-cli-gen-certs.conf
+++ b/tools/kubify/kubify/k8s/certs/kubify-cli-gen-certs.conf
@@ -27,4 +27,5 @@ keyUsage = nonRepudiation, digitalSignature, keyEncipherment
 subjectAltName = @alt_names
 
 [alt_names]
-DNS.1 = *.local.kubify.local
+DNS.1 = ingress-nginx-controller-admission.ingress-nginx.svc
+DNS.2 = *.local.kubify.local
