--- a/tools/kubify/kubify/k8s/certs/req.cnf
+++ b/tools/kubify/kubify/k8s/certs/req.cnf
@@ -36,4 +36,5 @@ subjectAltName 		   = @alt_names
 issuerAltName          = issuer:copy
 
 [alt_names]
-DNS.1 = *.local.kubify.local
+DNS.1 = ingress-nginx-controller-admission.ingress-nginx.svc
+DNS.2 = *.local.kubify.local
