--- a/backend/example-java-svc/config/config.dev.yaml
+++ b/backend/example-java-svc/config/config.dev.yaml
@@ -1,7 +1,7 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: example-spring-svc
+  name: example-java-svc
 data:
   ENV: dev
   NODE_ENV: dev
