--- a/backend/example-lambda-python-simple-svc/config/config.dev.yaml
+++ b/backend/example-lambda-python-simple-svc/config/config.dev.yaml
@@ -1,6 +1,7 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: example-lambda-python-svc
+  name: example-lambda-python-simple-svc
 data:
   ENV: dev
+  NODE_ENV: dev
