--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 **/.aws
 # NOTE: COMMENT THE NEXT LINE IF YOU ARE IN A PRIVATE FORK (AND MAKE SURE TO UNCOMMENT IF YOU ARE CONTRIBUTING TO OS PUBLIC REPO OR ANY PUBLIC FORK):
 dev/svc/*/secrets
+credentials
+**/credentials
 
 # Kubify
 ._kubify_work
