--- a/src/kubify/k8s/ansible/install_kubify_on_amzn2_centos_fedora_oracle_and_rhel.yaml
+++ b/src/kubify/k8s/ansible/install_kubify_on_amzn2_centos_fedora_oracle_and_rhel.yaml
@@ -204,6 +204,7 @@
     - name: add user to docker group 3
       become: no
       shell: sudo chown $USER /var/run/docker.sock
+      ignore_errors: true
 
 ################################################################################
 # dns setup (real linux, not for WSL2)
