--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,14 @@ version: "3.9"
 
 services:
   kubify:
-    build: .
+    build:
+      network: host
     # ports:
     #   - "443:443"
     working_dir: /src/kubify
+    network_mode: host
+    # ports:
+    #   - "127.0.0.1:62609:62609"
     volumes:
       - ./:/src/kubify
       - /var/run/docker.sock:/var/run/docker.sock
