--- a/src/kubify/k8s/ansible/install_kubify_on_mac_osx.yaml
+++ b/src/kubify/k8s/ansible/install_kubify_on_mac_osx.yaml
@@ -132,6 +132,12 @@
       when: homebrew_check.stat.exists
       ignore_errors: true
 
+    - name: Brew Kubesec (and Go) with Make
+      shell: brew install shyiko/kubesec/kubesec
+      when: homebrew_check.stat.exists
+      # until the new version of brew is released (they added accept_external_apps for pre-installed software on April 22, 2021)
+      ignore_errors: yes
+
     - name: Brew linking ensure kubectl
       shell: brew link --overwrite kubernetes-cli
       ignore_errors: true
@@ -193,11 +199,7 @@
     #   shell: brew link --overwrite docker visual-studio-code lens
     #   ignore_errors: yes
 
-    - name: Ensure Docker and Lens, VSCode are Installed
-      shell: brew install --cask docker visual-studio-code lens
-      when: homebrew_check.stat.exists
-      # until the new version of brew is released (they added accept_external_apps for pre-installed software on April 22, 2021)
-      ignore_errors: yes
+
 
     - name: Start Docker Desktop 1
       shell: open --background -a Docker
