--- a/src/kubify/k8s/ansible/install_kubify_on_mac_osx_m1_m1x.yaml
+++ b/src/kubify/k8s/ansible/install_kubify_on_mac_osx_m1_m1x.yaml
@@ -129,6 +129,12 @@
       # until the new version of brew is released (they added accept_external_apps for pre-installed software on April 22, 2021)
       ignore_errors: yes
 
+    - name: Brew Kubesec (and Go) with Make
+      shell: brew install shyiko/kubesec/kubesec
+      when: homebrew_check.stat.exists
+      # until the new version of brew is released (they added accept_external_apps for pre-installed software on April 22, 2021)
+      ignore_errors: yes
+
     # - name: Ensure Docker and VSCode are Installed
     #   shell: brew install --cask docker visual-studio-code
     #   when: homebrew_check.stat.exists
