--- a/src/kubify/k8s/ansible/install_kubify_on_mac_osx.yaml
+++ b/src/kubify/k8s/ansible/install_kubify_on_mac_osx.yaml
@@ -8,7 +8,7 @@
     # skaffold_url: https://storage.googleapis.com/skaffold/releases/v{{ skaffold_version }}/skaffold-darwin-amd64
     brew_taps:
       - johanhaleby/kubetail
-      - shyiko/kubesec
+      # - shyiko/kubesec
     brew_cask_packages:
       - docker
       - visual-studio-code
@@ -37,6 +37,9 @@
       - watch
       - npm
       - skaffold
+      - gpg
+      - glide
+      - go
     brew_packages_with_force_link:
       - kubernetes-cli
       - minikube
@@ -102,15 +105,15 @@
       ignore_errors: True
 
     # WORKAROUND 001: brew install kubesec #gives an error
-    - name: Check that the /usr/local/bin/kubesec exists
-      stat:
-        path: /usr/local/bin/kubesec
-      register: stat_result
+    # - name: Check that the /usr/local/bin/kubesec exists
+    #   stat:
+    #     path: /usr/local/bin/kubesec
+    #   register: stat_result
 
     # WORKAROUND 001: brew install kubesec #gives an error
-    - name: Install kubesec (workaround, since brew package has issues)
-      shell: curl -sSL https://github.com/shyiko/kubesec/releases/download/0.9.2/kubesec-0.9.2-darwin-amd64 -o kubesec && chmod a+x kubesec && sudo mv kubesec /usr/local/bin/
-      when: not stat_result.stat.exists
+    # - name: Install kubesec (workaround, since brew package has issues)
+    #   shell: curl -sSL https://github.com/shyiko/kubesec/releases/download/0.9.2/kubesec-0.9.2-darwin-amd64 -o kubesec && chmod a+x kubesec && sudo mv kubesec /usr/local/bin/
+    #   when: not stat_result.stat.exists
 
     - name: Install Homebrew Taps
       homebrew_tap:
@@ -133,16 +136,31 @@
       ignore_errors: true
 
     - name: Ensure Docker and Lens, VSCode are Installed
-       shell: brew install --cask docker visual-studio-code lens
-       when: homebrew_check.stat.exists
-       # until the new version of brew is released (they added accept_external_apps for pre-installed software on April 22, 2021)
-       ignore_errors: yes
-
-    - name: Brew Kubesec (and Go) with Make
-      shell: brew install shyiko/kubesec/kubesec
+      shell: brew install --cask docker visual-studio-code lens
       when: homebrew_check.stat.exists
-      # until the new version of brew is released (they added accept_external_apps for pre-installed software on April 22, 2021)
       ignore_errors: yes
+
+    # - name: Brew Kubesec (and Go) with Make
+    #   shell: brew install shyiko/kubesec/kubesec
+    #   when: homebrew_check.stat.exists
+    #   # until the new version of brew is released (they added accept_external_apps for pre-installed software on April 22, 2021)
+    #   ignore_errors: yes
+
+    # WORKAROUND 001: brew install kubesec #gives an error
+    # - name: Install kubesec (workaround, since brew package has issues)
+    #   shell: curl -sSL https://github.com/shyiko/kubesec/releases/download/0.9.2/kubesec-0.9.2-darwin-amd64 -o kubesec && chmod a+x kubesec && sudo mv kubesec /usr/local/bin/ && curl -sSL https://github.com/shyiko/kubesec/releases/download/0.9.2/kubesec-0.9.2-darwin-amd64.asc -o kubesec.asc && curl -sS https://keybase.io/shyiko/pgp_keys.asc | gpg --import && gpg --verify kubesec.asc /usr/local/bin/kubesec
+    #   when: not stat_result.stat.exists
+
+    # WORKAROUND 002: kubesec on mac osx monterey (git@github.com:willyguggenheim/kubesec.git)
+    - name: Make sure go path is created
+      shell: mkdir -p ~/kubify/go/bin
+    # WORKAROUND 002: kubesec on mac osx monterey (git@github.com:willyguggenheim/kubesec.git)
+    - name: Install kubesec (use my fork, since brew package has issues)
+      shell: GOPATH=~/kubify/go GO111MODULE="on" go install github.com/willyguggenheim/kubesec@latest && chmod a+x ~/kubify/go/bin/kubesec && sudo mv ~/kubify/go/bin/kubesec /usr/local/bin/kubesec
+    # WORKAROUND 002: kubesec on mac osx monterey (git@github.com:willyguggenheim/kubesec.git)
+    - name: Test kubesec
+      shell: kubesec --help
+
 
     - name: Brew linking ensure kubectl
       shell: brew link --overwrite kubernetes-cli
