--- a/src/kubify/k8s/ansible/install_kubify_on_mac_osx_m1_m1x.yaml
+++ b/src/kubify/k8s/ansible/install_kubify_on_mac_osx_m1_m1x.yaml
@@ -91,28 +91,6 @@
       when: homebrew_check.stat.exists
       ignore_errors: True
 
-    # # WORKAROUND 001: brew install kubesec #gives an error
-    # - name: Check that the /usr/local/bin/kubesec exists
-    #   stat:
-    #     path: /usr/local/bin/kubesec
-    #   register: stat_result
-
-    # # WORKAROUND 001: brew install kubesec #gives an error
-    # - name: Install kubesec (workaround, since brew package has issues)
-    #   shell: curl -sSL https://github.com/shyiko/kubesec/releases/download/0.9.2/kubesec-0.9.2-darwin-amd64 -o kubesec && chmod a+x kubesec && sudo mv kubesec /usr/local/bin/
-    #   when: not stat_result.stat.exists
-
-    # WORKAROUND 002: kubesec on mac osx monterey (git@github.com:willyguggenheim/kubesec.git)
-    - name: Make sure go path is created
-      shell: mkdir -p ~/kubify/go/bin
-    # WORKAROUND 002: kubesec on mac osx monterey (git@github.com:willyguggenheim/kubesec.git)
-    - name: Install kubesec (use my fork, since brew package has issues)
-      shell: GOPATH=~/kubify/go GO111MODULE="on" go install github.com/willyguggenheim/kubesec@latest && chmod a+x ~/kubify/go/bin/kubesec && sudo mv ~/kubify/go/bin/kubesec /usr/local/bin/kubesec
-    # WORKAROUND 002: kubesec on mac osx monterey (git@github.com:willyguggenheim/kubesec.git)
-    - name: Test kubesec
-      shell: kubesec --help
-
-
     - name: Install Homebrew Taps
       homebrew_tap:
         name: "{{ brew_taps }}"
@@ -147,6 +125,24 @@
     #   when: homebrew_check.stat.exists
     #   # until the new version of brew is released (they added accept_external_apps for pre-installed software on April 22, 2021)
     #   ignore_errors: yes
+    # WORKAROUND 001: brew install kubesec #gives an error
+    # - name: Install kubesec (workaround, since brew package has issues)
+    #   shell: curl -sSL https://github.com/shyiko/kubesec/releases/download/0.9.2/kubesec-0.9.2-darwin-amd64 -o kubesec && chmod a+x kubesec && sudo mv kubesec /usr/local/bin/ && curl -sSL https://github.com/shyiko/kubesec/releases/download/0.9.2/kubesec-0.9.2-darwin-amd64.asc -o kubesec.asc && curl -sS https://keybase.io/shyiko/pgp_keys.asc | gpg --import && gpg --verify kubesec.asc /usr/local/bin/kubesec
+    #   when: not stat_result.stat.exists
+    # WORKAROUND 002: kubesec on mac osx monterey (git@github.com:willyguggenheim/kubesec.git)
+    - name: Make sure go is linked
+      shell: go version || brew unlink go
+    - name: Make sure go is linked
+      shell: brew link go
+    # WORKAROUND 002: kubesec on mac osx monterey (git@github.com:willyguggenheim/kubesec.git)
+    - name: Make sure go path is created
+      shell: mkdir -p ~/kubify/go/bin
+    # WORKAROUND 002: kubesec on mac osx monterey (git@github.com:willyguggenheim/kubesec.git)
+    - name: Install kubesec (use my fork, since brew package has issues)
+      shell: GOPATH=~/kubify/go GO111MODULE="on" go install github.com/willyguggenheim/kubesec@latest && chmod a+x ~/kubify/go/bin/kubesec && sudo mv ~/kubify/go/bin/kubesec /usr/local/bin/kubesec
+    # WORKAROUND 002: kubesec on mac osx monterey (git@github.com:willyguggenheim/kubesec.git)
+    - name: Test kubesec
+      shell: kubesec --help
 
     # - name: Ensure Docker and VSCode are Installed
     #   shell: brew install --cask docker visual-studio-code
