--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,5 +14,5 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    #- name: Build the Docker image
-    #  run: docker build . --file Dockerfile --tag willy0912/kubify-local:$(date +%s)
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag willy0912/kubify-local:$GITHUB_REF
