docker: branch name only

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . -t willy0912/kubify-local:$GITHUB_REF
+      run: docker build . -t willy0912/kubify-local:${GITHUB_REF##*/}
