start refactoring to python package

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -26,3 +26,7 @@ replace = {new_version}
 [bumpversion:file:__version__]
 search = {current_version}
 replace = {new_version}
+
+[bumpversion:file:examples/*.txt]
+search = {current_version}
+replace = {new_version}
