--- a/.github/workflows/docker-pypi-cicd-gitops.yml
+++ b/.github/workflows/docker-pypi-cicd-gitops.yml
@@ -8,28 +8,31 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - name: version
+        id: getversion
+        run: echo "::set-output name=version::$(cat __version__)"
       # docker build test
       -
-        name: Set up QEMU
+        name: setup qemu
         uses: docker/setup-qemu-action@v2
       -
-        name: Set up Docker Buildx
+        name: setup biuldx
         uses: docker/setup-buildx-action@v2
       -
-        name: Login to DockerHub
+        name: login to dockerhub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       # dockerhub image push
       -
-        name: Build and push
+        name: push to dockerhub
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: willy0912/kubify-local:${GITHUB_REF##*/}
+          tags: willy0912/kubify-local:v${{ steps.getversion.outputs.version }}
       # pypi package push
-      - name: Publish a Python distribution to PyPI
+      - name: push to pypi
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
