--- a/.github/workflows/docker-pypi-gitops-push.yml
+++ b/.github/workflows/docker-pypi-gitops-push.yml
@@ -1,4 +1,4 @@
-name: docker-pypi-gitops-cicd
+name: docker-pypi-gitops-push
 on:
   push:
     branches:
@@ -8,31 +8,31 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - name: version
+      - name: get-version
         id: getversion
         run: echo "::set-output name=version::$(cat __version__)"
-      # docker build test
+      # docker build multi-arch setup
       -
-        name: setup qemu
+        name: setup-qemu-multiarch
         uses: docker/setup-qemu-action@v2
       -
-        name: setup biuldx
+        name: setup-biuldx-multiarch
         uses: docker/setup-buildx-action@v2
       -
-        name: login to dockerhub
+        name: login-dockerhub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      # dockerhub image push
+      # dockerhub image build security package push
       -
-        name: push to dockerhub
+        name: release-dockerhub
         uses: docker/build-push-action@v3
         with:
           push: true
           tags: willy0912/kubify-local:v${{ steps.getversion.outputs.version }}
-      # pypi package push
-      - name: push to pypi
+      # pypi package build package checks tests push
+      - name: release-pypi
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
