--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ python =
 [testenv:flake8]
 basepython = python
 deps = flake8
-commands = flake8 kubify tests
+commands = flake8 ./kubify --max-complexity 10
 
 [testenv]
 setenv =
@@ -25,3 +25,5 @@ commands =
     pip install -U pip
     pytest --basetemp={envtmpdir}
 
+[flake8]
+ignore = W292,E501,F401,F403,F405,F841,E712,E712,E265,F401,F401,F811
