--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
-stdout_callback=debug
-stderr_callback=debug
-deprecation_warnings=False
+stdout_callback = debug
+stderr_callback = debug
+deprecation_warnings = False
