--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ python =
     3.7: py37
 
 [testenv:flake8]
-basepython = python
+basepython = python3
 deps = flake8
 commands = flake8 ./kubify --max-complexity 10
 
