--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,32 +1,20 @@
-name: docker-pypi-gitops-push
+name: Docker PyPi CI
+
 on:
   push:
-    branches:
-      - 'main' # release branch of approved pr that is merged and tagged (with :main tag)
-      - 'kubify-9001' # testing docker release cicd in this branch (origin/kubify-9001)
+    branches: [ "main" ]
+  # pull_request:
+  #   branches: [ "main" ]
+
 jobs:
-  version-release:
-    name: Bump package version
-    # if: "!contains(github.event.head_commit.message, 'version')"
+
+  build:
     runs-on: nvcr.io/nvidia/cuda:11.7.0-runtime-ubuntu22.04 # or ubuntu-latest
     steps:
     - name: actions/checkout
       uses: actions/checkout@v2
       with:
           persist-credentials: false
-    - name: current_version
-      run: echo "current_version=$(grep '# version' version.md | cut -d ' ' -f3)" >> $GITHUB_ENV
-    - name: FragileTech/bump-version
-      uses: FragileTech/bump-version@main
-      with:
-        current_version: "${{ env.current_version }}"
-        files: version.md
-        commit_name: Kubify-Actions
-        commit_email: w@kubify.com
-        token: "${{ secrets.GITHUB_TOKEN }}"
-    - name: get-version
-      id: getversion
-      run: echo "::set-output name=version::$(cat __version__)"
     - name: pypi-make-package
       id: makepypipackage
       run: apt update && apt install -y make && make package
@@ -55,4 +43,4 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: willy0912/kubify-local:v${{ steps.getversion.outputs.version }}
+        tags: willy0912/kubify-local:main
