--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,7 @@ on:
 jobs:
 
   build:
-    runs-on: nvcr.io/nvidia/cuda:11.7.0-runtime-ubuntu22.04 # or ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
     - name: actions/checkout
       uses: actions/checkout@v2
