--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
           persist-credentials: false
     - name: pypi-make-package
       id: makepypipackage
-      run: apt update && apt install -y make && make package
+      run: python3 setup.py sdist bdist_wheel
     # pypi package ship
     - name: release-pypi
       uses: pypa/gh-action-pypi-publish@release/v1
