--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -11,7 +11,7 @@ replace = {new_version}
 search = {current_version}
 replace = {new_version}
 
-[bumpversion:file:README.md]
+[bumpversion:file:README.rst]
 search = {current_version}
 replace = {new_version}
 
@@ -27,6 +27,6 @@ replace = {new_version}
 search = {current_version}
 replace = {new_version}
 
-[bumpversion:file:examples/*.txt]
-search = {current_version}
-replace = {new_version}
+# [bumpversion:file:examples/*.txt]
+# search = {current_version}
+# replace = {new_version}
