--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ usedevelop = True
 ;     -r{toxinidir}/requirements.txt
 commands =
     pip install -e .[develop]
-    pytest --basetemp={envtmpdir}
+    pytest tests
 
 ; [flake8]
 ; ignore = W292,E501,F401,F403,F405,F841,E712,E712,E265,F401,F401,F811
